cmake_minimum_required(VERSION 3.5)
option(ENABLE_TESTING "Enable testing" ON)
add_library(set_stl set_stl.cpp)
if(ENABLE_TESTING)
  find_package(GTest REQUIRED)
  include_directories(${GTEST_INCLUDE_DIR})
  add_executable(test test.cpp)
  target_link_libraries(test set_stl)
    if(WIN32)
    target_link_libraries(test debug ${GTEST_MAIN_LIBRARY_DEBUG} debug ${GTEST_LIBRARY_DEBUG})
    target_link_libraries(test optimized ${GTEST_MAIN_LIBRARY} optimized ${GTEST_LIBRARY})
    elseif(UNIX)
    target_link_libraries(test ${GTEST_MAIN_LIBRARY} ${GTEST_LIBRARY} pthread)
    endif()  
endif()